# qdrant-bench

./: .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  banner.txt  pyproject.toml
.github/workflows/: ci.yml  e2e.yml
src/qdrant_bench/: main.py
src/qdrant_bench/application/usecases/connections/: manage.py
src/qdrant_bench/application/usecases/datasets/: manage.py
src/qdrant_bench/application/usecases/experiments/: create.py  execute.py
src/qdrant_bench/application/usecases/reports/: generate.py
src/qdrant_bench/application/usecases/runs/: trigger.py
src/qdrant_bench/application/usecases/storage/: manage.py
src/qdrant_bench/domain/entities/: core.py
src/qdrant_bench/domain/services/: evaluator.py
src/qdrant_bench/infrastructure/: telemetry.py
src/qdrant_bench/infrastructure/generators/: llm.py  rule_based.py
src/qdrant_bench/infrastructure/iac/: adapter.py  main.tf
src/qdrant_bench/infrastructure/persistence/: database.py  dataset_loader.py  models.py
src/qdrant_bench/infrastructure/persistence/repositories/: connection.py  dataset.py  experiment.py  run.py  storage.py
src/qdrant_bench/infrastructure/services/: deterministic_embedding.py  openai_embedding.py
src/qdrant_bench/infrastructure/telemetry/: __init__.py  qdrant_adapter.py
src/qdrant_bench/infrastructure/workloads/: multi_vector.py  single_vector.py
src/qdrant_bench/ports/: embedding_service.py  evaluator.py  generator.py  metrics_service.py  repositories.py  workload.py
src/qdrant_bench/presentation/api/: dependencies.py  main.py
src/qdrant_bench/presentation/api/dtos/: models.py
src/qdrant_bench/presentation/api/routes/: connections.py  datasets.py  experiments.py  reports.py  runs.py  storage.py  system.py
src/qdrant_bench/presentation/cli/: main.py
src/qdrant_bench/presentation/reports/: generator.py
src/qdrant_bench/presentation/reports/templates/: report.html
src/qdrant_bench/presentation/static/: app.js  index.html
tests/e2e/: conftest.py  data_factory.py  docker-compose.yml  test_api_e2e.py
tests/integration/: __init__.py  fixtures.py  test_create_experiment.py  test_dataset_loader.py  test_usecase.py  test_validation.py
tests/integration/fakes/: __init__.py  adapters.py  repositories.py  services.py
tickets/ai_experiment_core/: AI-1-Experiment-Execution-Engine.md  AI-1-Implementation.md  AI-2-Implementation.md  AI-2-Metrics-Evaluation.md  AI-3-Experiment-Generation-Rules.md  AI-3-Implementation.md  AI-4-Experiment-Generation-LLM.md  AI-4-Implementation.md  AI-5-Implementation.md  AI-5-Workload-Definitions.md
tickets/done/backend/: BE-1-Project-Scaffold.md  BE-2-IAC-Core.md  BE-3-Encoding-Client.md  BE-4-API-Design.md  BE-5-Persistence-Core.md  BE-6-Telemetry-Logging.md  BE-7-Qdrant-Telemetry-Adapter.md
tickets/frontend/: FE-1-Report-Generator.md  FE-2-Charts-Visualization.md  FE-3-Dashboard-UI.md
