[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdrant-bench"
version = "0.1.0"
description = "Qdrant Benchmarking and Optimization Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "typer",
    "uvicorn",
    "pydantic",
    "pydantic-ai",
    "structlog",
    "logfire",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-asyncpg",
    "asyncpg",
    "sqlmodel",
    "python-terraform",
    "openai",
    "httpx",
    "jinja2",
    "qdrant-client",
    "greenlet",
    "polars",
    "boto3",
    "aioboto3",
    "numpy",
]

[project.scripts]
qdrant-bench = "qdrant_bench.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qdrant_bench"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/oldstuff"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "src"
  , "tests"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: Integration tests with fakes",
    "e2e: End-to-end tests requiring Docker (Qdrant + Postgres + API over HTTP)",
    "slow: Slow running tests"
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]
